--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.41",
     "@types/tmi.js": "^1.7.1",
+    "chance": "^1.1.7",
     "tmi.js": "^1.8.3"
   }
 }
