--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Joe Alves",
   "license": "ISC",
   "scripts": {
-    "start": "tsc && node --inspect dist/src/main.js"
+    "start-bot": "tsc && node dist/src/bot.js",
+    "start-bot-dev": "tsc && node --inspect dist/src/bot.js"
   },
   "devDependencies": {
     "@tsconfig/node12": "^1.0.7",
@@ -14,6 +15,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@types/chance": "^1.1.1",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.41",
     "@types/tmi.js": "^1.7.1",
