--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "misspenny",
   "version": "1.0.0",
-  "description": "a twitch chat bot for joe_js",
-  "main": "main.js",
+  "description": "the sweetest sweetie and general service for ttv/joe_js",
   "author": "Joe Alves",
   "license": "ISC",
   "scripts": {
-    "start-bot": "tsc && node dist/src/bot.js",
-    "start-bot-dev": "tsc && node --inspect dist/src/bot.js"
+    "build": "tsc",
+    "dev": "tsc && node --inspect dist/src/index.js",
+    "bot-dev": "tsc && node --inspect dist/src/chatbot/bot.js",
+    "start": "node dist/src/index.js",
+    "bot": "node dist/src/chatbot/bot.js"
   },
   "devDependencies": {
     "@tsconfig/node12": "^1.0.7",
@@ -20,6 +22,7 @@
     "@types/node": "^14.14.41",
     "@types/tmi.js": "^1.7.1",
     "chance": "^1.1.7",
+    "express": "^4.17.1",
     "tmi.js": "^1.8.3"
   }
 }
