--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "dependencies": {
     "@types/chance": "^1.1.1",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.41",
+    "@types/node-fetch": "^2.5.10",
     "@types/tmi.js": "^1.7.1",
     "chance": "^1.1.7",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "node-fetch": "^2.6.1",
     "tmi.js": "^1.8.3"
   }
 }
