--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.41",
     "@types/node-fetch": "^2.5.10",
+    "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
     "@types/tmi.js": "^1.7.1",
     "chance": "^1.1.7",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "node-fetch": "^2.6.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "tmi.js": "^1.8.3"
   }
 }
