--- a/client-src/package.json
+++ b/client-src/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && mv build ../client-build",
+    "build": "rm -rf ../client-build && react-scripts build && mv build ../client-build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
