--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "bot": "node dist/src/chatbot/bot.js"
   },
   "devDependencies": {
+    "@jimp/png": "^0.16.1",
     "@tsconfig/node12": "^1.0.7",
+    "jimp": "^0.16.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.2.4"
-  },
-  "dependencies": {
+    "typescript": "^4.2.4",
     "@types/chance": "^1.1.1",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
@@ -24,7 +24,9 @@
     "@types/node-fetch": "^2.5.10",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
-    "@types/tmi.js": "^1.7.1",
+    "@types/tmi.js": "^1.7.1"
+  },
+  "dependencies": {
     "chance": "^1.1.7",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
