--- a/package.json
+++ b/package.json
@@ -14,25 +14,29 @@
   "devDependencies": {
     "@jimp/png": "^0.16.1",
     "@tsconfig/node12": "^1.0.7",
-    "jimp": "^0.16.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.2.4",
     "@types/chance": "^1.1.1",
+    "@types/connect-redis": "^0.0.16",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.41",
     "@types/node-fetch": "^2.5.10",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
-    "@types/tmi.js": "^1.7.1"
+    "@types/tmi.js": "^1.7.1",
+    "jimp": "^0.16.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "chance": "^1.1.7",
+    "connect-redis": "^5.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "handy-redis": "^2.2.1",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "redis": "^3.1.2",
     "tmi.js": "^1.8.3"
   }
 }
