--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "ISC",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc && node dist/src/index.js",
-    "bot-dev": "tsc && node --inspect dist/src/chatbot/bot.js",
+    "dev": "tsc && node --inspect dist/src/index.js",
+    "bot-dev": "tsc && node dist/src/chatbot/bot.js",
     "start": "node dist/src/index.js",
     "bot": "node dist/src/chatbot/bot.js"
   },
